[gd_scene load_steps=6 format=3 uid="uid://6v66hgshcca0"]

[ext_resource type="Script" uid="uid://dj416e6e71v8c" path="res://addons/CustomControls/Dialogs/shake_message_dialog.gd" id="1_n0ws7"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="2_ovdu2"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="3_4hj8m"]

[sub_resource type="Gradient" id="Gradient_h6x0o"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6shew"]
gradient = SubResource("Gradient_h6x0o")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="ShakeMessageDialog" type="Window"]
title = "Shake Message"
position = Vector2i(0, 36)
size = Vector2i(400, 207)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_n0ws7")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6shew")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
text = "Magnitude:"

[node name="ShakeMagnitude" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_ovdu2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 3.0
step = 0.01
value = 1.1

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
text = "Frequency:"

[node name="ShakeFrequency" parent="MarginContainer/VBoxContainer/HBoxContainer6" instance=ExtResource("2_ovdu2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
step = 0.01
value = 10.0
allow_greater = true

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
text = "Shake Duration:"

[node name="ShakeDuration" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("2_ovdu2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
step = 0.01
value = 0.6
allow_greater = true
suffix = " seconds"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
text = "Wait To Finished:"

[node name="ShakeWaitToFinished" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "enabled"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("3_4hj8m")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("3_4hj8m")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
